# bittorrent

./: .dmypy.json  README.md  pyproject.toml  requirements.txt  torrent_client.py
src/: .dmypy.json  1.torrent  test.py
src/bittorrent/: __init__.py  enums.py  exceptions.py  torrent.py  torrent_client.py  types.py  utils.py
src/bittorrent/enums/: __init__.py  block_state.py  peer_source_kind.py  tracker.py
src/bittorrent/metadata/: keys.py  torrent.py
src/bittorrent/metadata/models/: __init__.py  torrent_metadata.py  torrent_metadata_dht_node.py  torrent_metadata_info.py  torrent_metadata_info_file_entry.py  torrent_metadata_info_file_node.py  torrent_metadata_info_file_tree.py
src/bittorrent/metadata/parsers/: __init__.py  info_file_tree_parser.py  info_files_parser.py  info_parser.py  metadata_parser.py
src/bittorrent/peers/: __init__.py  bitfield.py  connection.py  handshake.py  manager.py  message_dispatcher.py  message_parser.py  send_message_mixin.py  source.py  state.py
src/bittorrent/peers/messages/: __init__.py  abstract.py  bitfield.py  cancel.py  choke.py  (+8 more)
src/bittorrent/pieces/: __init__.py  availability_map.py  block.py  block_request.py  file_handler.py  leecher.py  manager.py  piece.py  piece_manager.py  piece_requester.py  registry.py
src/bittorrent/protocol/: handshake.py  peer.py  peer_address.py  swarm.py
src/bittorrent/trackers/: __init__.py  multi_tracker_announcer.py  periodic_tracker_announcer.py  torrent_announce_list.py  torrent_announce_list_tier.py  tracker_manager.py
src/bittorrent/utils/: __init__.py  torrent.py  tracker.py
(+41 files in other folders)
